<resources>
    <string name="app_name">UnaAyuditaAqui</string>
    <string name="title_active_login">UnaAyuditaAqui</string>
    <string name="my_account">Mi cuenta</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre Completo</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Email</string>
    <string name="login">Iniciar Sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="text_signup">¿No tienes cuenta?</string>
    <string name="link_signup">Registrarse</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificación de Email</string>
    <string name="subtitle_check_email">¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="home">Inicio</string>
    <string name="profile">Mi Perfil</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="search">Buscar</string>
    <string name="history">Historial</string>
    <string name="messages">Mensajes</string>
    <string name="my_services">Mis servicios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="night_mode">Modo Oscuro</string>
    <string name="change_region">Cambiar región</string>
    <string name="setting">Configuración</string>
    <string name="share">Compartir</string>
    <string name="help">Ayuda</string>
    <string name="about">Acerca de</string>
    <string name="edit_account">Editar cuenta</string>
    <string name="date_form">Fecha</string>
    <string name="date">01/01/2022</string>
    <string name="description">Descripción</string>
    <string name="save">Guardar</string>
    <string name="category">Categoria</string>
    <string name="title">Titulo</string>
    <string-array name="type_service">
        <item>Brindar</item>
        <item>Solicitar</item>
    </string-array>

</resources>