<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="24dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/recycler_view_item_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <RelativeLayout
                android:id="@+id/header_image_root"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/imageServiceCardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_profile" />

            </RelativeLayout>

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/category"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:gravity="center|start"
                android:layout_toEndOf="@id/header_image_root"
                android:fontFamily="sans-serif-light"
                android:text="@string/title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:padding="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date"
                android:textColor="@color/black_200"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

